@@ -1,3 +1,10 @@
+Thu Apr 15  9:47:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/UnixFileHandle.m: ([-fileDescriptor]) return a valid file
+	descriptor (for /dev/null) for the null device.
+	* Source/NSTask.m: ([-launch]) Add code to reset signals in subprocess
+	and to close all file descriptors (except stdin, stdout and stderr).
+
 Wed Apr 14 14:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSPortNameServer.m: Don't suspend thread while waiting for
